2009-10-07  Markus Rost <rost@math.uni-bielefeld.de>

	* help.el (describe-no-warranty): Place point in a slightly better
	position in the GPLv3 text.

2009-10-06  Sam Steingold  <sds@gnu.org>

	* net/tramp-compat.el (tramp-compat-process-running-p): Check that
	the comm attribute is present before calling regexp-quote.

2009-10-06  Juanma Barranquero  <lekktu@gmail.com>

	* play/animate.el (animate-string): For good effect, make sure
	`indent-tabs-mode' and `show-trailing-whitespace' are nil.

	* play/animate.el (animate-sequence, animate-birthday-present):
	* misc.el (butterfly): Don't set `indent-tabs-mode'.

2009-10-06  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/byte-run.el (define-obsolete-face-alias): Doc fix.

	* emacs-lisp/autoload.el (autoload-excludes): New variable.
	(autoload-generate-file-autoloads): Skip files in autoload-excludes.
	(batch-update-autoloads): Process a string value of autoload-excludes,
	set during the build process.
	* Makefile.in (autoloads): Skip preloaded files.  (Bug#4446)

	* net/tramp.el (tramp-handle-start-file-process): Move tramp-error call
	inside with-parsed...  macro so that `v' is defined.

	* progmodes/f90.el (f90-end-of-block, f90-beginning-of-block):
	* progmodes/fortran.el (fortran-end-of-block)
	(fortran-beginning-of-block):
	Also push mark in the macro case.

	* emerge.el (emerge-show-file-name):
	* calc/calc.el (calc-quit):
	* calc/calc-misc.el (calc-big-or-small):
	* calc/calc-graph.el (calc-graph-view):
	* calc/calc-ext.el (calc-reset):
	* calendar/calendar.el (calendar-basic-setup):
	Use window-full-height-p.

	* mail/rmailedit.el (rmail-cease-edit): If there is a Content-Type
	header we don't understand, don't insert another.  (Bug#4624)
	If changing mime charset, insert the new one in the right place.

2009-10-06  Matthew Junker  <matthew.junker@sbcglobal.net>  (tiny change)

	* calendar/cal-tex.el (cal-tex-cursor-month-landscape)
	(cal-tex-cursor-month): Correctly increment the end date for diary and